[gd_scene load_steps=10 format=2]

[ext_resource path="res://Assets/Sprites.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Player/PlayerManager.gd" type="Script" id=2]
[ext_resource path="res://Scripts/HeatManager.gd" type="Script" id=3]
[ext_resource path="res://Scripts/HurtBox.gd" type="Script" id=4]
[ext_resource path="res://Scripts/Player/DetectArea.gd" type="Script" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 6.00005, 7.99996 )

[sub_resource type="Curve" id=3]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.826733, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 7.99994, 10.0001 )

[sub_resource type="CircleShape2D" id=4]
radius = 231.106

[node name="Player" type="KinematicBody2D" groups=["Player"]]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 1.81198e-05, 1.81198e-05 )
rotation = 1.57079
z_index = 1
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 0, 0, 16, 16 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 5.96046e-08, -1.78814e-07 )
rotation = 1.57079
shape = SubResource( 1 )

[node name="BoostParticles" type="CPUParticles2D" parent="."]
position = Vector2( -4, 0 )
emitting = false
amount = 100
emission_shape = 2
emission_rect_extents = Vector2( 2, 2 )
direction = Vector2( -40, 3 )
spread = 20.0
gravity = Vector2( -200, 0 )
initial_velocity = 155.96
scale_amount_curve = SubResource( 3 )

[node name="HeatParticles" type="CPUParticles2D" parent="."]
modulate = Color( 1, 0.270588, 0.27451, 1 )
position = Vector2( -4, 0 )
emitting = false
amount = 158
emission_shape = 2
emission_rect_extents = Vector2( 2, 2 )
direction = Vector2( -100, 3 )
spread = 20.0
gravity = Vector2( -20, 0 )
initial_velocity = 15.0
scale_amount_curve = SubResource( 3 )

[node name="shotPos" type="Position2D" parent="."]
position = Vector2( 22, 0 )

[node name="HurtBox" type="Area2D" parent="."]
position = Vector2( -7.99998, 1.81198e-05 )
rotation = 1.57079
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
modulate = Color( 0.290196, 1, 0, 1 )
position = Vector2( 3.21943e-05, -7.99998 )
shape = SubResource( 2 )

[node name="HeatManager" type="Node2D" parent="."]
script = ExtResource( 3 )

[node name="HeatTimer" type="Timer" parent="HeatManager"]

[node name="CoolTimer" type="Timer" parent="HeatManager"]

[node name="DetectArea" type="Area2D" parent="."]
script = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectArea"]
shape = SubResource( 4 )

[node name="ShotDelay" type="Timer" parent="."]
wait_time = 0.3

[node name="MissileDelay" type="Timer" parent="."]
wait_time = 3.2

[connection signal="body_entered" from="HurtBox" to="HurtBox" method="_on_HurtBox_body_entered"]
[connection signal="body_exited" from="HurtBox" to="HurtBox" method="_on_HurtBox_body_exited"]
[connection signal="timeout" from="HeatManager/HeatTimer" to="HeatManager" method="_on_HeatTimer_timeout"]
[connection signal="timeout" from="HeatManager/CoolTimer" to="HeatManager" method="_on_CoolTimer_timeout"]
[connection signal="body_entered" from="DetectArea" to="DetectArea" method="_on_DetectArea_body_entered"]
[connection signal="body_exited" from="DetectArea" to="DetectArea" method="_on_DetectArea_body_exited"]
[connection signal="timeout" from="ShotDelay" to="." method="_on_ShotDelay_timeout"]
[connection signal="timeout" from="MissileDelay" to="." method="_on_MissileDelay_timeout"]
